align buttons to right Fixes #21

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ ul {
 
 section {
   margin: 0 auto;
-  padding: 20px 35px 35px 0;
+  padding: 20px 60px 35px 0px;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   box-shadow: 2px 2px rgba(0, 0, 0, 0.2);
@@ -111,6 +111,18 @@ section {
   cursor: pointer;
 }
 
+button.delete {
+  float: right;
+}
+
+button.unmarked {
+  float: right;
+}
+
+button.marked {
+  float: right;
+}
+
 @media screen and (max-width: 600px) {
   h1 {
     font-size: 3rem;
@@ -122,5 +134,7 @@ section {
     font-size: 0.9rem;
   }
 }
+
+
 
 
